Utilities/otbliblas/include/liblas/capi/liblas.h

typedef struct LASVLRHS *LASVLRH;
/**
 * \todo to be documented
 */
typedef enum
{
    LE_None = 0,
    LE_Debug = 1,
    LE_Warning = 2,
    LE_Failure = 3,
    LE_Fatal = 4
} LASError;
/** Gets the reserved value of the VLR.  This should be 0 and should aways be 0.
 *  @param hVLR the LASVLRH instance
 *  @return the reserved value of the VLR.
*/
LAS_DLL uint16_t LASVLR_GetReserved(const LASVLRH hVLR);
/** Sets the reserved value of the VLR.  This should be 0 and you should not 
 *  have to ever monkey with this value according to the spec.
 *  @param hVLR the LASVLRH instance
 *  @param value the value to set for the reserved value
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASVLR_SetReserved(LASVLRH hVLR, uint16_t value);
/** Gets the data stream for the VLR as an array of bytes.  The length of this 
 *  array should be the same as LASVLR_GetRecordLength.  You must allocate it on 
 *  the heap and you are responsible for its destruction.
 *  @param hVLR the LASVLRH instance
 *  @param data a pointer to your array where you want the data copied
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASVLR_GetData(const LASVLRH hVLR, uint8_t* data);
/** Sets the data stream for the VLR as an array of bytes.  The length of this 
 *  array should be the same as LASVLR_GetRecordLength.  The data are copied into 
 *  the VLR structure.
 *  @param hVLR the LASVLRH instance
 *  @param data a pointer to your array.  It must be LASVLR_GetRecordLength in size
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASVLR_SetData(const LASVLRH hVLR, uint8_t* data, uint16_t length);