Utilities/otbliblas/csharp/dotnetLibLAS/LibLASCAPI.cs


        /** Gets the reserved value of the VLR.  This should be 0 and should aways be 0.
        *  @param hVLR the LASVLRH instance
        *  @return the reserved value of the VLR.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASVLR_GetReserved(LASVLRH hVLR);

        /** Sets the reserved value of the VLR.  This should be 0 and you should not 
        *  have to ever monkey with this value according to the spec.
        *  @param hVLR the LASVLRH instance
        *  @param value the value to set for the reserved value
        *  @return LASErrorEnum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASVLR_SetReserved(LASVLRH hVLR, UInt16 value);

        /** Gets the data stream for the VLR as an array of bytes
        *  @param hVLR the LASVLRH instance
        *  @param data a pointer to where place the array
        *  @param length a pointer to where to place the length of the array
        *  @return LASErrorEnum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASVLR_GetData(LASVLRH hVLR, out byte[] data);//, ref int length);

        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASVLR_SetData(LASVLRH hVLR, ref byte[] data, int length);
    }
}
